// protoc command
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative orders.proto

// what syntax we are going to use it
syntax = "proto3";

// the name of the package
package orders;

// the options for the proto file
option go_package = "/orders";

// declaring the data. The first one is a Log data, having a name (position 1) and a data (position 2)
message Order{
    string id = 1;
    double price = 2;
    double priceVET = 3;
    double volume = 4;
    int64 createdAt= 5;
}

// second message the log request that has a Log message
message OrderRequest {
    Order orderAsk = 1;
    Order orderBid = 2;
}

// trird message - the response from the server is result string
message OrderResponse {
    string result = 1;
}

// define the services - the name of the function that we will have in the service. 
// receiving a log request and returns a logresponse
service OrderService {
    rpc WriteOrder(OrderRequest) returns (OrderResponse);
}